--- a/build.gradle
+++ b/build.gradle
@@ -13,20 +13,52 @@
  */
 
 
-apply plugin: 'java'
+apply plugin: 'scala'
 apply plugin: 'findbugs'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'osgi'
 
 
-
-defaultTasks 'assemble', 'jar'
-
+// For the entire project
 repositories {
     maven {url 'http://nexus.bjondhealth.com/nexus/content/groups/public'}
     maven {url 'http://nexus.bjondhealth.com/nexus/content/groups/private'}
 }
+
+sourceSets {
+    main {
+        scala {
+            srcDirs = ['src/main/scala', 'src/main/java']
+        }
+        java {
+            srcDirs = []
+        }
+    }
+}
+
+//sourceSets.test.scala.srcDirs = ['src/test/scala',  'src/test/java']
+//sourceSets.test.java.srcDirs = []
+
+/*
+// For emacs ensime
+buildscript {
+  repositories {
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
+  }
+  dependencies {
+    classpath "gradle.plugin.net.coacoas.gradle:ensime-gradle:0.2.2"
+  }
+}
+
+
+apply plugin: "org.ensime.gradle"
+*/
+
+defaultTasks 'assemble', 'jar'
+
 
 configurations {
     testManagedCompile { extendsFrom testCompile }
@@ -34,6 +66,10 @@ configurations {
 }
 
 dependencies {
+    // Scala Baby
+    compile 'org.scala-lang:scala-library:2.11.7'
+
+    
     compile 'org.postgresql:postgresql:9.4-1204-jdbc42'
     
     compile 'junit:junit:4.12'
