--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'findbugs'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'osgi'
-
+apply plugin: 'idea'
 
 // For the entire project
 repositories {
@@ -37,25 +37,6 @@ sourceSets {
     }
 }
 
-//sourceSets.test.scala.srcDirs = ['src/test/scala',  'src/test/java']
-//sourceSets.test.java.srcDirs = []
-
-/*
-// For emacs ensime
-buildscript {
-  repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
-  }
-  dependencies {
-    classpath "gradle.plugin.net.coacoas.gradle:ensime-gradle:0.2.2"
-  }
-}
-
-
-apply plugin: "org.ensime.gradle"
-*/
 
 defaultTasks 'assemble', 'jar'
 
