--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,11 @@
  */
 
 
-apply plugin: 'scala'
 apply plugin: 'findbugs'
 apply plugin: 'eclipse'
 apply plugin: 'groovy'
 apply plugin: 'osgi'
+apply plugin: 'java'
 
 
 // For the entire project
@@ -26,36 +26,7 @@ repositories {
     maven {url 'http://nexus.bjondhealth.com/nexus/content/groups/private'}
 }
 
-sourceSets {
-    main {
-        scala {
-            srcDirs = ['src/main/scala', 'src/main/java']
-        }
-        java {
-            srcDirs = []
-        }
-    }
-}
 
-//sourceSets.test.scala.srcDirs = ['src/test/scala',  'src/test/java']
-//sourceSets.test.java.srcDirs = []
-
-/*
-// For emacs ensime
-buildscript {
-  repositories {
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
-  }
-  dependencies {
-    classpath "gradle.plugin.net.coacoas.gradle:ensime-gradle:0.2.2"
-  }
-}
-
-
-apply plugin: "org.ensime.gradle"
-*/
 
 defaultTasks 'assemble', 'jar'
 
@@ -66,10 +37,6 @@ configurations {
 }
 
 dependencies {
-    // Scala Baby
-    compile 'org.scala-lang:scala-library:2.11.7'
-
-    
     compile 'org.postgresql:postgresql:9.4-1204-jdbc42'
     
     compile 'junit:junit:4.12'
